<resources>
    <string name="app_name">Notebook</string>

    <!-- region MainActivity -->
    <string name="ma_notes">Notes</string>
    <string name="ma_settings">Settings</string>
    <string name="ma_planner">Planner</string>
    <!-- endregion -->

    <!-- region NotesFragment -->
    <string name="nf_label">Notes</string>
    <string name="nf_add_menu">Add</string>
    <string name="nf_empty_note">Create your first note</string>
    <string name="nf_delete_title">Delete note?</string>
    <string name="nf_delete">Delete</string>
    <string name="nf_add_note">Add note</string>
    <string name="nf_no_notes">No notes have been created, let"'"s try!</string>
    <string name="nf_successful_delete">Note has successfully deleted</string>
    <string name="nf_cancel">Cancel</string>
    <!-- endregion -->

    <!-- region NoteInfoFragment -->
    <string name="nif_label">Info</string>
    <string name="nif_tags">Tags:</string>
    <!-- endregion -->

    <!-- region NoteEditorFragment -->
    <string name="nef_title_edit">Edit note</string>
    <string name="nef_title_create">Create note</string>
    <string name="nef_title_field">Title</string>
    <string name="nef_description_field">Description</string>
    <string name="nef_save">Save</string>
    <string name="nef_selection_tag">Select tags if needed:</string>
    <string name="nef_successful_save">Note has successfully saved</string>
    <!-- endregion -->

    <!-- region SettingsFragment -->
    <string name="sf_label">Settings</string>
    <string name="sf_design_category">Design</string>
    <string name="sf_theme_title">Theme</string>
    <string name="sf_theme_summary">Select theme</string>
    <string name="sf_about_title">About App</string>
    <string name="sf_tags_title">Tags</string>
    <string name="sf_test_title">Test Google Drive</string>
    <string name="sf_info_category">Information</string>
    <string name="sf_test_category">Test</string>
    <string name="sf_get_files_title">File creation status</string>
    <string name="sf_ok_button">OK</string>
    <!-- endregion -->

    <!-- region AboutFragment -->
    <string name="af_label">About Notebook</string>
    <string name="af_text">This app is the best way of creating short notes. (In WIP status)</string>
    <!-- endregion -->

    <!-- region TagsFragment -->
    <string name="tf_label">Tags</string>
    <string name="tf_name_tint">Tag name</string>
    <string name="tf_add_button">Add tag</string>
    <string name="tf_existing_tags">Existing tags:</string>
    <string name="tf_add_label">Add your tag to group notes: </string>
    <string name="tf_delete_title">Delete tag: %1$s</string>
    <string name="tf_delete_message">Are you sure you want to remove this tag? This tag will be removed from all your notes.</string>
    <string name="tf_cancel">Cancel</string>
    <string name="tf_delete">Delete</string>
    <!-- endregion -->

    <!--  region PlannerFragment  -->
    <string name="pf_label">Planner</string>
    <string name="pf_completed_count">Completed %1$s/%2$s</string>
    <string name="pf_add">Add</string>
    <string name="pf_calendar">Calendar</string>
    <string name="pf_successful_delete">Task has successfully deleted</string>
    <string name="pf_add_task_title">Create task</string>
    <string name="pf_create">Create</string>
    <string name="pf_cancel">Cancel</string>
    <string name="pf_add_task">Add task</string>
    <string name="pf_no_tasks">No tasks have been created for the day</string>
    <string name="pf_mark_uncompleted_title">Mark as uncompleted</string>
    <string name="pf_mark_uncompleted_description">Are you sure you want to mark this task as uncompleted?</string>
    <string name="pf_yes">Yes</string>
    <string name="pf_edit_task">Edit</string>
    <string name="pf_delete_task">Delete</string>
    <!--  endregion  -->

    <!--  region TaskEditorDialog  -->
    <string name="ted_hint">Input task</string>
    <string name="ted_save">Save</string>
    <string name="ted_add">Add</string>
    <string name="ted_cancel">Cancel</string>
    <string name="ted_edit_title">Edit task</string>
    <string name="ted_create_title">Create task</string>
    <!--  endregion  -->

</resources>
