<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/sf_design_category">

        <ListPreference
            app:defaultValue="-1"
            app:dialogTitle="@string/sf_theme_summary"
            app:entries="@array/theme_style_titles"
            app:entryValues="@array/theme_style_values"
            app:icon="@drawable/ic_theme"
            app:key="theme_type_pref"
            app:summary="@string/sf_theme_summary"
            app:title="@string/sf_theme_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sf_info_category">

        <Preference
            app:key="about_pref"
            app:icon="@drawable/ic_info"
            app:title="@string/sf_about_title" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
