<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    app:startDestination="@id/notes">

    <fragment
        android:id="@+id/notes"
        android:name="com.boristul.notebook.ui.notes.NotesFragment"
        android:label="@string/nf_label"
        tools:layout="@layout/fragment_notes">
        <action
            android:id="@+id/action_notes_to_note_editor"
            app:destination="@id/note_editor"
            app:enterAnim="@android:anim/fade_in" />
        <action
            android:id="@+id/action_notes_to_note_info"
            app:destination="@id/note_info" />
    </fragment>

    <dialog
        android:id="@+id/note_info"
        android:name="com.boristul.notebook.ui.notes.noteinfo.NoteInfoFragment"
        android:label="@string/nif_label"
        tools:layout="@layout/fragment_note_info">
        <action
            android:id="@+id/action_note_info_to_note_editor"
            app:destination="@id/note_editor"
            app:enterAnim="@android:anim/fade_in" />

        <argument
            android:name="note"
            app:argType="com.boristul.entity.NoteWithTags" />

    </dialog>

    <fragment
        android:id="@+id/note_editor"
        android:name="com.boristul.notebook.ui.notes.noteeditor.NoteEditorFragment"
        android:label="@string/nef_title_edit"
        tools:layout="@layout/fragment_note_editor">

        <argument
            android:name="note"
            android:defaultValue="@null"
            app:argType="com.boristul.entity.NoteWithTags"
            app:nullable="true" />

    </fragment>

    <fragment
        android:id="@+id/settings"
        android:name="com.boristul.notebook.ui.settings.SettingsFragment"
        android:label="@string/sf_label">
        <action
            android:id="@+id/action_settings_to_about"
            app:destination="@id/about"
            app:enterAnim="@android:anim/fade_in" />
        <action
            android:id="@+id/action_settings_to_tags"
            app:destination="@id/tags"
            app:enterAnim="@android:anim/fade_in" />
    </fragment>

    <fragment
        android:id="@+id/planner"
        android:name="com.boristul.notebook.ui.planner.PlannerFragment"
        android:label="@string/pf_label"
        tools:layout="@layout/fragment_planner">
        <action
            android:id="@+id/action_planner_to_task_editor"
            app:destination="@id/task_editor" />
    </fragment>

    <dialog
        android:id="@+id/task_editor"
        android:name="com.boristul.notebook.ui.planner.taskeditor.TaskEditorDialog"
        tools:layout="@layout/dialog_task_editor">

        <argument
            android:name="date"
            android:defaultValue="@null"
            app:argType="org.joda.time.LocalDate"
            app:nullable="true" />

        <argument
            android:name="task"
            android:defaultValue="@null"
            app:argType="com.boristul.entity.TaskPoint"
            app:nullable="true" />

    </dialog>

    <fragment
        android:id="@+id/about"
        android:name="com.boristul.notebook.ui.settings.about.AboutFragment"
        android:label="@string/af_label"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/tags"
        android:name="com.boristul.notebook.ui.settings.tags.TagsFragment"
        android:label="@string/tf_label"
        tools:layout="@layout/fragment_tags" />

</navigation>
