<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_graph"
    app:startDestination="@id/settings">

    <fragment
        android:id="@+id/settings"
        android:name="com.boristul.notebook.ui.settings.SettingsFragment"
        android:label="@string/sf_label">
        <action
            android:id="@+id/action_settings_to_about"
            app:destination="@id/about"
            app:enterAnim="@android:anim/fade_in" />
        <action
            android:id="@+id/action_settings_to_tags"
            app:destination="@id/tags"
            app:enterAnim="@android:anim/fade_in" />
    </fragment>

    <fragment
        android:id="@+id/about"
        android:name="com.boristul.notebook.ui.settings.about.AboutFragment"
        android:label="@string/af_label"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/tags"
        android:name="com.boristul.notebook.ui.settings.tags.TagsFragment"
        android:label="@string/tf_label"
        tools:layout="@layout/fragment_tags" />

</navigation>
